<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_raumreservierung"
            android:icon="@drawable/ic_menu_raumreservierung"
            android:title="@string/menu_raumreservierung" />
        <item
            android:id="@+id/nav_links"
            android:icon="@drawable/ic_menu_link"
            android:title="@string/menu_links" />
        <item
            android:id="@+id/nav_einstellungen"
            android:icon="@drawable/ic_menu_einstellungen"
            android:title="@string/menu_einstellungen" />

    </group>
</menu>