<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.projektmanagementtest.ui.userinput.UserInputFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_userinput" />

    <fragment
        android:id="@+id/nav_raumreservierung"
        android:name="com.example.projektmanagementtest.ui.raumreservierung.RaumreservierungFragment"
        android:label="@string/menu_raumreservierung"
        tools:layout="@layout/fragment_raumreservierung" />

    <fragment
        android:id="@+id/nav_links"
        android:name="com.example.projektmanagementtest.ui.links.LinksFragment"
        android:label="@string/menu_links"
        tools:layout="@layout/fragment_links" />

    <fragment
        android:id="@+id/nav_einstellungen"
        android:name="com.example.projektmanagementtest.ui.einstellungen.EinstellungenFragment"
        android:label="@string/menu_einstellungen"
        tools:layout="@layout/fragment_settings" />
</navigation>